grid and flexbox tutorial

--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -3,9 +3,20 @@
     <head>
         <title>Youtube replica</title>
         <link rel="stylesheet" href="styles/youtube.css">
+        <link rel="stylesheet" href="styles/header.css">
+        <link rel="stylesheet" href="styles/general.css">        
     </head>
     <body>
-        <input class="search-bar" type="text" placeholder="Search">
+
+        <div class="header">
+            <div class="left-section">
+                right-side
+            </div>
+            <div class="middle-section">
+                <input class="search-bar" type="text" placeholder="Search">
+            </div>
+            <div class="right-section">left-side</div>
+        </div>
 
         <div class="video-grid">
             <div class="video-preview">
