--- a/lesson10a.html
+++ b/lesson10a.html
@@ -2,17 +2,21 @@
 <html>
     <head>
         <style>
+            body {
+                display: grid;
+                grid-template-columns: 200px 200px 200px;
+                column-gap: 22px;
+            }
+
             .container {
                 width: 200px;
                 font-family: Arial, Helvetica, sans-serif;
                 padding-bottom: 8px;
                 box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.4);
-                display: inline-block;
-                margin-left: 20px;
             }
 
             .profile-pic {
-                width: 200px;
+                width: 100%;
                 height: 200px;
                 object-fit: cover;
                 object-position: right;
@@ -24,12 +28,15 @@
                 font-weight: bold;
                 margin: 0;
                 margin-top: 7px;
-                margin-bottom: 5px;
+            }
+
+            .friends {
+                display: grid;
+                grid-template-columns: 30px 1fr;
+                align-items: center;
             }
 
             .friends p {
-                display: inline-block;
-                margin-top: 0;
                 margin-left: 5px;
                 font-size: 15px;
                 color: rgb(161, 160, 160);
@@ -37,9 +44,7 @@
 
             .friends img {
                 border-radius: 50px;
-                width: 30px;
-                display: inline-block;
-                vertical-align: middle;
+                width: 100%;
             }
 
             button {
@@ -53,48 +58,60 @@
             .name , .add-friend , .friends {
                 margin-left: 5px;
             }
+
+            .grid-container {
+                display: grid;
+                grid-template-columns:;
+                align-items: center;
+            }
         </style>
     </head>
     <body>
         <div class="container">
             <img class="profile-pic" src="youtube\thumbnails\thumbnail-1.webp">
-            <div class="name">
-                <p>Oliver</p>
-            </div>
-            <div class="friends">
-                <img src="youtube/thumbnails/channel-1.jpeg" alt="">
-                <p>2 mutual friends</p>
-            </div>
-            <div class="add-friend">
-                <button>Add Friend</button>
+            <div class="grid-container">
+                <div class="name">
+                    <p>Oliver</p>
+                </div>
+                <div class="friends">
+                    <img src="youtube/thumbnails/channel-1.jpeg" alt="">
+                    <p>2 mutual friends</p>
+                </div>
+                <div class="add-friend">
+                    <button>Add Friend</button>
+                </div>
             </div>
         </div>
 
         <div class="container">
             <img class="profile-pic" src="youtube\thumbnails\thumbnail-2.webp">
-            <div class="name">
-                <p>Mimi</p>
-            </div>
-            <div class="friends">
-                <img src="youtube/thumbnails/channel-1.jpeg" alt="">
-                <p>2 mutual friends</p>
-            </div>
-            <div class="add-friend">
-                <button>Add Friend</button>
+            <div class="grid-container">
+                <div class="name">
+                    <p>Mimi</p>
+                </div>
+                <div class="friends">
+                    <img src="youtube/thumbnails/channel-1.jpeg" alt="">
+                    <p>2 mutual friends</p>
+                </div>
+                <div class="add-friend">
+                    <button>Add Friend</button>
+                </div>
             </div>
         </div>
 
         <div class="container">
             <img class="profile-pic" src="youtube\thumbnails\channel-2.jpeg">
-            <div class="name">
-                <p>Rex</p>
-            </div>
-            <div class="friends">
-                <img src="youtube/thumbnails/channel-1.jpeg" alt="">
-                <p>2 mutual friends</p>
-            </div>
-            <div class="add-friend">
-                <button>Add Friend</button>
+            <div class="grid-container">
+                <div class="name">
+                    <p>Rex</p>
+                </div>
+                <div class="friends">
+                    <img src="youtube/thumbnails/channel-1.jpeg" alt="">
+                    <p>2 mutual friends</p>
+                </div>
+                <div class="add-friend">
+                    <button>Add Friend</button>
+                </div>
             </div>
         </div>
     </body>
