--- a/youtube/flexbox.html
+++ b/youtube/flexbox.html
@@ -23,6 +23,7 @@
         <div style="
         display: flex;
         flex-direction: row;
+        margin-top: 30px;
         ">
             <div style="background-color: lightblue;">div 1</div>
             <div style="background-color: lightpink;">div2 <p>text</p></div>
