--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -10,12 +10,20 @@
 
         <div class="header">
             <div class="left-section">
-                right-side
+                <img class="menu" src="icons/hamburger-menu.svg" alt="hamburger-menu">
+                <img class="youtube-logo" src="icons/youtube-logo.svg">
             </div>
             <div class="middle-section">
                 <input class="search-bar" type="text" placeholder="Search">
+                <img class="search-icon" src="icons/search.svg" alt="searchbar">
+                <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="voice-search-icon">
             </div>
-            <div class="right-section">left-side</div>
+            <div class="right-section">
+                <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
+                <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
+                <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+                <img class="profile-pics" src="thumbnails/abdullah.jpg" alt="profile-pics">
+            </div>
         </div>
 
         <div class="video-grid">
