--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="styles/youtube.css">
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/general.css">        
+        <link rel="stylesheet" href="styles/left-bar.css">        
     </head>
     <body>
 
@@ -15,14 +16,47 @@
             </div>
             <div class="middle-section">
                 <input class="search-bar" type="text" placeholder="Search">
-                <img class="search-icon" src="icons/search.svg" alt="searchbar">
+                <div class="search-section">
+                    <img class="search-icon" src="icons/search.svg" alt="searchbar">
+                    <div class="tooltip">Search</div>
+                </div>
                 <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="voice-search-icon">
             </div>
             <div class="right-section">
                 <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
                 <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
-                <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+                <div class="notifications-container">
+                    <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+                    <div class="notifications-count">3</div>
+                </div>
                 <img class="profile-pics" src="thumbnails/abdullah.jpg" alt="profile-pics">
+            </div>
+        </div>
+
+        <div class="left-bar">
+            <div class="side-bar-link">
+                <img src="left-side menu/home.svg" alt="home-icon">
+                <div>Home</div>
+            </div>
+            <div class="side-bar-link">
+                <img src="left-side menu/explore.svg" alt="explore-icon">
+                <div>Explore</div>
+            </div>
+            <div class="side-bar-link">
+                <img src="left-side menu/subscriptions.svg" alt="subscription-icon">
+                <div>Subscriptions</div>
+            </div>
+            <div class="side-bar-link">
+                <img src="left-side menu/originals.svg" alt="original-icon">
+                <div>Original</div>
+            </div>
+            <div class="side-bar-link">
+                <img src="left-side menu/youtube-music.svg" alt="youtube-music-icon">
+                <div>Youtube Music</div>
+            </div>
+            <div class="side-bar-link">
+                <img src="left-side menu/library.svg" alt="library">
+                <div>Library</div>
             </div>
         </div>
 
@@ -30,6 +64,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                     <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+                    <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -52,6 +87,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                    <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+                   <div class="video-time">8:22</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -74,6 +110,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                     <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+                    <div class="video-time">9:13</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -96,6 +133,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                    <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+                   <div class="video-time">22:09</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -118,6 +156,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                     <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+                    <div class="video-time">11:17</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -140,6 +179,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                    <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+                   <div class="video-time">19:59</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -162,6 +202,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                    <img class="thumbnail" src="thumbnails/thumbnail-7.webp">
+                   <div class="video-time">10:13</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -184,6 +225,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                     <img class="thumbnail" src="thumbnails/thumbnail-8.webp">
+                    <div class="video-time">7:12</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -206,6 +248,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                    <img class="thumbnail" src="thumbnails/thumbnail-9.webp">
+                   <div class="video-time">13:17</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -228,6 +271,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                     <img class="thumbnail" src="thumbnails/thumbnail-10.webp">
+                    <div class="video-time">7:53</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -250,6 +294,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                    <img class="thumbnail" src="thumbnails/thumbnail-11.webp">
+                   <div class="video-time">4:10</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
@@ -272,6 +317,7 @@
             <div class="video-preview">
                 <div class="thumbnail-box">
                    <img class="thumbnail" src="thumbnails/thumbnail-12.webp">
+                   <div class="video-time">4:51</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-img">
